2000-10-20  Pavel Cisler  <pavel@eazel.com>

	* libgnomevfs/gnome-vfs-uri.c: (gnome_vfs_uri_new):
	Fix a memory trasher Mathieu found.

2000-10-20  Michael Engber  <engber@eazel.com>

	* libgnomevfs/gnome-vfs-xfer.c: (copy_directory):
	progress callbacks used to get called in situations
	when they shouldn't (error or skip cases).

2000-10-20  John Sullivan  <sullivan@eazel.com>

	* data/mime/gnome-vfs.keys:
	* data/mime/gnome-vfs.mime: Changed staroffice types
	from "x-soffice-*" to "x-staroffice-*" after user reported
	such a MIME type.

2000-10-20  John Sullivan  <sullivan@eazel.com>

	* data/mime/gnome-vfs.keys: Added text/htmlH, which is used
	by the help system; also moved application/mime-type-test to
	alphabetical order so check-mime.pl doesn't gripe about it.

2000-10-20  John Sullivan  <sullivan@eazel.com>

	* libgnomevfs/gnome-vfs-async-ops.h: Added missing include
	that was making this not standalone. This was uncovered by
	a Nautilus extra-includes-removing pass that caused build
	breakage.

2000-10-20  Pavel Cisler <pavel@eazel.com>

	Work on bug 2989, not done yet.
	
	* modules/file-method.c: (mkdir_recursive),
	(match_trash_item_by_device_id), (find_disk_top_directory),
	(save_trash_entry_cache), (add_local_cached_trash_entry),
	(add_cached_trash_entry), (destroy_cached_trash_entry),
	(read_saved_cached_trash_entries), (create_trash_near),
	(cached_trash_entry_exists),
	(find_locally_cached_trash_entry_for_device_id),
	(find_cached_trash_entry_for_device), (find_trash_near),
	(find_trash_directory), (do_find_directory):
	Add a two level caching scheme for remembering trash folder locations.
	This will help us only do the long search for a Trash directory do
	the first time Nautilus ever runs or if a Trash directory gets moved
	manually by the user to a different place.
	In addition to caching the locations in a list in memory we now
	also save them into a file in the user home settings directory.